Add version overrides for ajv packages
Added overrides for ajv and ajv-keywords versions.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "react",
   "version": "1.0.0",
+  "overrides": {
+    "ajv": "8.17.1",
+    "ajv-keywords": "5.1.0"
+  },
   "description": "",
   "keywords": [],
   "main": "src/index.tsx",
