Clean up package.json by removing unnecessary entries
Removed unused fields and devDependencies from package.json.

--- a/package.json
+++ b/package.json
@@ -2,22 +2,13 @@
   "name": "verviers-pulse",
   "version": "1.0.0",
   "description": "App Jogging Verviers",
-  "keywords": [],
-  "main": "src/index.js",
+  "private": true,
   "dependencies": {
     "lucide-react": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
-  },
-  "devDependencies": {
-    "ajv": "^8.17.1",
-    "ajv-keywords": "^5.1.0"
-  },
-  "overrides": {
-    "ajv": "^8.17.1",
-    "ajv-keywords": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
