--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
+  "overrides": {
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
